// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmInfo component test suite FilmInfo renders correctly 1`] = `
<div
  className="film-info"
>
  <img
    className="film-info-poster"
    src="https://images-na.ssl-images-amazon.com/images/I/41qSUP7S3XL._AC_UL320_SR228,320_.jpg"
  />
  <div
    className="film-info-description-wrapper"
  >
    <div
      className="film-info-name-and-rating-wrapper"
    >
      <span
        className="film-info-name"
      >
        Kill bill
      </span>
      <span
        className="film-info-rating"
      >
        4.2
      </span>
    </div>
    <div
      className="film-info-genre"
    >
      Action & Adventure
    </div>
    <div
      className="film-info-year-and-length-wrapper"
    >
      <span
        className="film-info-year"
      >
        2004
      </span>
      <span
        className="film-info-length"
      >
        120
         min
      </span>
    </div>
    <div
      className="film-info-description"
    >
      A former assassin knwon as The Bride wakens from a four-year coma. The child she carried in her womb is gone. Now she must wreak vengeance on the team of assassins who betrayed her - a team she was once part of.
    </div>
    <div
      className="film-info-director"
    >
      Director: 
      Quentin Tarantino
    </div>
    <div
      className="film-info-cast"
    >
      Cast: 
      Uma Thurman, David Carradine, Daryl Hannah
    </div>
  </div>
</div>
`;

exports[`Header component test suite Header snapshot renders correctly 1`] = `
<div
  className="header"
>
  <a
    href={undefined}
    onClick={[Function]}
  >
    <span
      className="title red-font"
    >
      MovieDB
    </span>
    <button
      className="header-top-search-button btn btn-lg"
    >
      SEARCH
    </button>
  </a>
  <div
    className="film-info"
  >
    <img
      className="film-info-poster"
      src="https://images-na.ssl-images-amazon.com/images/I/41qSUP7S3XL._AC_UL320_SR228,320_.jpg"
    />
    <div
      className="film-info-description-wrapper"
    >
      <div
        className="film-info-name-and-rating-wrapper"
      >
        <span
          className="film-info-name"
        >
          Kill bill
        </span>
        <span
          className="film-info-rating"
        >
          4.2
        </span>
      </div>
      <div
        className="film-info-genre"
      >
        Action & Adventure
      </div>
      <div
        className="film-info-year-and-length-wrapper"
      >
        <span
          className="film-info-year"
        >
          2004
        </span>
        <span
          className="film-info-length"
        >
          120
           min
        </span>
      </div>
      <div
        className="film-info-description"
      >
        A former assassin knwon as The Bride wakens from a four-year coma. The child she carried in her womb is gone. Now she must wreak vengeance on the team of assassins who betrayed her - a team she was once part of.
      </div>
      <div
        className="film-info-director"
      >
        Director: 
        Quentin Tarantino
      </div>
      <div
        className="film-info-cast"
      >
        Cast: 
        Uma Thurman, David Carradine, Daryl Hannah
      </div>
    </div>
  </div>
</div>
`;
